@startuml

title __SETTINGS's Class Diagram__\n

  namespace com.aaron.yespdf {
    namespace settings {
      class com.aaron.yespdf.settings.SettingsActivity {
          ~ mRvSettings : RecyclerView
          {static} - EXTRA_FROM_PREVIEW : String
          - mUnbinder : Unbinder
          + onBackPressed()
          + onSupportNavigateUp()
          {static} + start()
          {static} + start()
          # createToolbar()
          # layoutId()
          # onCreate()
          # onDestroy()
          - disableSwipeBack()
          - initView()
      }
    }
  }
  

  namespace com.aaron.yespdf {
    namespace settings {
      class com.aaron.yespdf.settings.SettingsAdapter {
          {static} - ITEM_COUNT : int
          {static} - POS_CLICK_FLIP_PAGE : int
          {static} - POS_COLOR_REVERSE : int
          {static} - POS_KEEP_SCREEN_ON : int
          {static} - POS_NUM_PICKER : int
          {static} - POS_SCROLL_LEVEL : int
          {static} - POS_SHOW_STATUS_BAR : int
          {static} - POS_VOLUME_CONTROL : int
          {static} - TYPE_NUM_PICKER : int
          {static} - TYPE_SEEKBAR : int
          {static} - TYPE_SWITCH : int
          - mMaxRecentCounts : List<String>
          + getItemCount()
          + getItemViewType()
          + onBindViewHolder()
          + onCreateViewHolder()
          ~ SettingsAdapter()
          - tapOptions()
      }
    }
  }
  

  namespace com.aaron.yespdf {
    namespace settings {
      class com.aaron.yespdf.settings.SettingsAdapter.MaxRecentHolder {
          ~ spinner : Spinner
          ~ tvCount : TextView
          ~ tvTitle : TextView
          ~ MaxRecentHolder()
      }
    }
  }
  

  namespace com.aaron.yespdf {
    namespace settings {
      class com.aaron.yespdf.settings.SettingsAdapter.SeekbarHolder {
          ~ seekBar : SeekBar
          ~ tvTitle : TextView
          ~ SeekbarHolder()
      }
    }
  }
  

  namespace com.aaron.yespdf {
    namespace settings {
      class com.aaron.yespdf.settings.SettingsAdapter.SwitchHolder {
          ~ switcher : Switch
          ~ tvTitle : TextView
          ~ SwitchHolder()
      }
    }
  }
  

  com.aaron.yespdf.settings.SettingsActivity -up-|> com.aaron.yespdf.common.CommonActivity
  com.aaron.yespdf.settings.SettingsAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.aaron.yespdf.settings.SettingsAdapter o-- com.aaron.yespdf.common.event.MaxRecentEvent : mMaxRecentEvent
  com.aaron.yespdf.settings.SettingsAdapter +-down- com.aaron.yespdf.settings.SettingsAdapter.MaxRecentHolder
  com.aaron.yespdf.settings.SettingsAdapter +-down- com.aaron.yespdf.settings.SettingsAdapter.SeekbarHolder
  com.aaron.yespdf.settings.SettingsAdapter +-down- com.aaron.yespdf.settings.SettingsAdapter.SwitchHolder
  com.aaron.yespdf.settings.SettingsAdapter.MaxRecentHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.aaron.yespdf.settings.SettingsAdapter.SeekbarHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder
  com.aaron.yespdf.settings.SettingsAdapter.SwitchHolder -up-|> androidx.recyclerview.widget.RecyclerView.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
